[package]
name = "bstr"
version = "0.1.0"
authors = ["CasualX <CasualX@GitHub.com>"]

description = "BSTR for COM"

documentation = "https://casualx.github.io/docs/com-rs/0.1.0/bstr"
repository = "https://github.com/CasualX/com-rs"

readme = "readme.md"

keywords = ["basic", "string", "bstr", "com"]

license = "MIT"

[dependencies]
winapi = "0.2"
oleaut32-sys = "0.2"
